// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "pytest",
        "type": "test",
        "version": "6.2.1",
      },
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "test": Object {
        "category": "10.test",
        "description": "Runs tests",
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
}
`;

exports[`dependencies 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "aws-cdk.core",
        "type": "runtime",
        "version": "*",
      },
      Object {
        "name": "Django",
        "type": "runtime",
        "version": "3.1.5",
      },
      Object {
        "name": "hypothesis",
        "type": "test",
        "version": "^6.0.3",
      },
      Object {
        "name": "pytest",
        "type": "test",
        "version": "6.2.1",
      },
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "test": Object {
        "category": "10.test",
        "description": "Runs tests",
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
hypothesis>=6.0.3, <7.0.0
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws-cdk.core>=0.0.0
Django==3.1.5
",
}
`;

exports[`dependencies via ctor 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "aws-cdk.core",
        "type": "runtime",
        "version": "*",
      },
      Object {
        "name": "Django",
        "type": "runtime",
        "version": "3.1.5",
      },
      Object {
        "name": "hypothesis",
        "type": "test",
        "version": "^6.0.3",
      },
      Object {
        "name": "pytest",
        "type": "test",
        "version": "6.2.1",
      },
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "test": Object {
        "category": "10.test",
        "description": "Runs tests",
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
hypothesis>=6.0.3, <7.0.0
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws-cdk.core>=0.0.0
Django==3.1.5
",
}
`;

exports[`no pytest 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
}
`;
